--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -7,7 +7,7 @@
   <!--end::Logo-->
 
   <ng-container *ngIf="asideSelfMinimizeToggle">
-    <button class="brand-toggle btn btn-sm px-0" id="kt_aside_toggle">
+    <button class="px-0 brand-toggle btn btn-sm" id="kt_aside_toggle">
       <span
         [inlineSVG]="
           './assets/media/svg/icons/Navigation/Angle-double-left.svg'
@@ -103,11 +103,11 @@
         <div class="menu-submenu">
           <i class="menu-arrow"></i>
           <ul class="menu-subnav">
-           <li class="menu-item" aria-haspopup="true">
+           <!-- <li class="menu-item" aria-haspopup="true">
               <span class="menu-link">
                 <span class="menu-text">Reportes</span>
               </span>
-            </li>
+            </li> -->
 
             <!-- begin::2 Level -->
             <li
@@ -130,7 +130,7 @@
             <!-- end::2 Level -->
 
             <!-- begin::2 Level -->
-            <li
+            <!-- <li
               class="menu-item"
               aria-haspopup="true"
               data-menu-toggle="hover"
@@ -146,7 +146,7 @@
                 </i>
                 <span class="menu-text">Con Saldo</span>
               </a>
-            </li>
+            </li> -->
             <!-- end::2 Level -->
           </ul>
         </div>
@@ -157,15 +157,15 @@
 
 <!-- Applications -->
       <!-- begin::section -->
-      <li class="menu-section">
+      <!-- <li class="menu-section">
         <h4 class="menu-text">Consultas</h4>
         <i class="menu-icon flaticon-more-v2"></i>
-      </li>
+      </li> -->
       <!-- end:: section -->
 
       <!-- ECommerce -->
       <!-- begin::1 Level -->
-      <li
+      <!-- <li
         class="menu-item menu-item-submenu"
         aria-haspopup="true"
         data-menu-toggle="hover"
@@ -186,7 +186,7 @@
         </a>
         <div class="menu-submenu">
           <i class="menu-arrow"></i>
-          <ul class="menu-subnav">
+          <ul class="menu-subnav"> -->
             <!-- <li class="menu-item" aria-haspopup="true">
               <span class="menu-link">
                 <span class="menu-text">eCommerce</span>
@@ -194,7 +194,7 @@
             </li> -->
 
             <!-- begin::2 Level -->
-            <li
+            <!-- <li
               class="menu-item"
               aria-haspopup="true"
               data-menu-toggle="hover"
@@ -210,13 +210,13 @@
                 </i>
                 <span class="menu-text">Lista de húespedes</span>
               </a>
-            </li>
+            </li> -->
             <!-- end::2 Level -->
 
 
-          </ul>
+          <!-- </ul>
         </div>
-      </li>
+      </li> -->
       <!-- end::1 Level -->
 
 
@@ -230,7 +230,7 @@
       <!-- Wordpress -->
       <!-- begin::1 Level -->
 
-      <li
+      <!-- <li
         class="menu-item"
         aria-haspopup="true"
         routerLinkActive="menu-item-active"
@@ -247,7 +247,7 @@
           ></span>
           <span class="menu-text">Mi movSuite</span>
         </a>
-      </li>
+      </li> -->
       <!-- end::1 Level -->
 
     </ul>
