--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -232,16 +232,16 @@
               <table *ngIf="bandera===false" class="table overflow-hidden table-head-custom table-vertical-center">
                 <thead>
                   <th  >
-                    HABITACION
+                    HAB
                   </th>
                   <th>
-                  $ TARIFA
+                  $ NOCHE
                   </th>
                   <th>
                    $ TOTAL
                   </th>
                   <th >
-                    CAPACIDAD
+                    CAP
                   </th>
                 </thead>
                 <ng-container *ngFor="let habitacionesDisponibles of mySet">
@@ -264,16 +264,16 @@
         <table  class="table overflow-hidden table-head-custom table-vertical-center">
           <thead>
             <th  >
-              HABITACION
+              HAB
             </th>
             <th>
-            $ TARIFA
+            $ NOCHE
             </th>
             <th>
              $ TOTAL
             </th>
             <th >
-              CAPACIDAD
+              CAP
             </th>
           </thead>
           <ng-container *ngFor="let habitacionesDisponibles of mySet">
