--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.scss
@@ -1,7 +1,6 @@
-.mat-tab-label {
-  min-width: 25px !important;
-  padding: 5px;
-  background-color: transparent;
-  color: red;
-  font-weight: 700;
+
+.mat-select
+{
+  width: fit-content;
+  min-width: 100%;
 }
